--- a/deploy/nginx/api_proxy.conf
+++ b/deploy/nginx/api_proxy.conf
@@ -1,4 +1,4 @@
-proxy_pass http://backend;
+proxy_pass http://backend;nError('<
 proxy_set_header X-Real-IP __IP_HEADER__;
 proxy_set_header Host $http_host;
 client_max_body_size 200M;
